# glfw

./: CMakeLists.txt  main.cpp
asset/shader/box/: box.frag  box.vert
asset/shader/light/: light.frag  light.vert
asset/shader/simple/: simple.frag  simple.vert
src/camera/: Camera.h
src/shader/: Shader.h
